<resources>

    <string name="app_name">FarmersApp</string>
    <string name="your_name">নাম:</string>
    <string name="your_phoneno">মোবাইল নম্বর:</string>
    <string name="login_as_farmerText">কৃষিজীবী হিসেবে লগ ইন করুন</string>
    <string name="login_as_buyerText">ক্রেতা হিসেবে লগ ইন করুন</string>
    <string name="enter_phoneText">মোবাইল নম্বর দিন</string>
    <string name="enter_pinText">পিন নম্বর দিন</string>
    <string name="confirm_pinText">পুনরায় পিন নম্বর দিন</string>
    <string name="forgotPin_text">পিন নম্বর ভুলে গিয়েছেন?</string>
    <string name="loginButton_text">লগ ইন</string>
    <string name="createAcc_asFarmer_text">কৃষিজীবী হিসেবে নতুন একাউন্ট তৈরী করতে এখানে ট্যাপ করুন!</string>
    <string name="createAcc_asBuyer_text">ক্রেতা হিসেবে নতুন একাউন্ট তৈরী করতে এখানে ট্যাপ করুন!</string>
    <string name="general_info">সাধারণ তথ্য</string>
    <string name="enter_name">নাম দিন</string>
    <string name="dateOfBirth">জন্ম তারিখ:</string>
    <string name="day">দিন</string>
    <string name="month">মাস</string>
    <string name="year">বছর</string>
    <string name="address">ঠিকানা</string>
    <string name="division">বিভাগ:</string>
    <string name="district">জেলা:</string>
    <string name="subDistrict">উপজেলা:</string>
    <string name="union">ইউনিয়ন:</string>
    <string name="thana">থানা:</string>
    <string name="village">গ্রাম:</string>
    <string name="confirmRegistration">রেজিস্ট্রেশন নিশ্চিত করুন</string>
    <string name="phoneText">মোবাইল নম্বর</string>
    <string name="pinText">পিন নম্বর</string>
    <string name="otp_info_text">আপনার ফোনে পাঠানো ওয়ান টাইম পাসওয়ার্ডটি প্রদান করুন</string>
    <string name="otp_hint">ওয়ান টাইম পাসওয়ার্ড</string>
    <string name="otp_confirmText">পরবর্তী</string>
    <string name="occupation_text">পেশাঃ</string>

    <string name="home">হোম</string>
    <string name="marketplace">কেনা-বেচা</string>
    <string name="blog">ব্লগ</string>
    <string name="vehicle_tracking">যন্ত্রপাতি খুঁজুন</string>
    <string name="more">আরও</string>

    <!--    String names for HomeFragment-->
    <string name="categories">ক্যাটেগরিস্</string>
    <string name="information">তথ্যকোষ</string>
    <string name="cultivation">চাষাবাদ</string>
    <string name="poultry">পোল্ট্রি ফার্ম</string>
    <string name="suggestions">পরামর্শ</string>
    <string name="disease">শস্যের রোগসনাক্ত</string>
    <string name="mircoloan">মাইক্রো-লোন</string>
    <string name="stories">সাফল্যতার জয়</string>
    <string name="howItWorks">অ্যাপটি কীভাবে কাজ করে?</string>
    <string name="learnMore">আরও জানুন</string>

    <string-array name="division_name">
        <item>বরিশাল</item>
        <item>ঢাকা</item>
    </string-array>

    <string-array name="district_dhaka">
        <item>ঢাকা</item>
        <item>গাজীপুর</item>
    </string-array>

    <string-array name="thana_gazipur">
        <item>কাপাসিয়া</item>
        <item>কালিয়াকৈর</item>
    </string-array>

    <string-array name="thana_dhaka">
        <item>আশুলিয়া</item>
        <item>ধামরাই</item>
    </string-array>


    <string-array name="thana_barisal">
        <item>বরিশাল</item>
        <item>কাউনিয়া</item>
    </string-array>

    <string-array name="thana_patuakhali">
        <item>পটুয়াখালী সদর</item>
        <item>গলাচিপা</item>
    </string-array>

    <string-array name="district_barisal">
        <item>বরিশাল</item>
        <item>পটুয়াখালী</item>
    </string-array>

    <string-array name="subDistrict_dhaka">
        <item>সাভার</item>
        <item>ধামরাই</item>
    </string-array>

    <string-array name="subDistrict_gazipur">
        <item>কালিয়াকৈর</item>
        <item>কাপাসিয়া</item>
    </string-array>

    <string-array name="union_savar">
        <item>শিমুলিয়া</item>
        <item>আশুলিয়া</item>
    </string-array>

    <string-array name="union_dhamrai">
        <item>যাদবপুর</item>
        <item>ভাড়ারিয়া</item>
    </string-array>

    <string-array name="union_kapashia">
        <item>কাপাসিয়া</item>
        <item>তরগাঁও</item>
    </string-array>

    <string-array name="union_kaliyakoir">
        <item>বোয়ালী</item>
        <item>ফুলবাড়ীয়া</item>
    </string-array>


    <string-array name="subDistrict_barisal">
        <item>গৌরনদী</item>
        <item>উজিরপুর</item>
    </string-array>


    <string-array name="subDistrict_patuakhali">
        <item>কলাপাড়া</item>
        <item>গলাচিপা</item>
    </string-array>

    <string-array name="union_kolapara">
        <item>ধানখালী</item>
        <item>নীলগঞ্জ</item>
    </string-array>

    <string-array name="union_golachipa">
        <item>আমখোলা</item>
        <item>ডাকুয়া</item>
    </string-array>

    <string-array name="union_gouronodi">
        <item>খাঞ্জাপুর</item>
        <item>চাঁদশী</item>
    </string-array>

    <string-array name="union_uzirpur">
        <item>সাতলা</item>
        <item>বরাকোঠা</item>
    </string-array>

    <string-array name="date">
        <item>১</item>
        <item>২</item>
        <item>৩</item>
        <item>৪</item>

    </string-array>

    <string-array name="month">

        <item>জানুয়ারি</item>
        <item>ফেব্রুয়ারি</item>
        <item>মার্চ</item>
    </string-array>

    <string-array name="year">
        <item>১৯৭১</item>
        <item>১৯৭২</item>
        <item>১৯৭৩</item>
        <item>১৯৭৩</item>
    </string-array>
    <string name="title_activity_ex">ex</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="give_rent">সরঞ্জাম ভাড়া দিয়েছেন:</string>
    <string name="take_rent">সরঞ্জাম ভাড়া নিয়েছেন:</string>
    <string name="edit_profile">সম্পাদনা করুন</string>
    <string name="list_of_selling_text">আপনার বিক্রয়ের তালিকাঃ</string>
    <string name="no_sell_post">আপনি একটিও বিক্রয়ের পোস্ট দেননি</string>
    <string name="per_hour_price">ঘন্টা প্রতি ভাড়াঃ</string>
    <string name="register_instrument">সরঞ্জাম রেজিস্ট্রেশন</string>
    <string name="upload_image_text">সরঞ্জামের একটি ছবি আপলোড করুন:</string>
    <string name="select_location">লোকেশন সিলেক্ট করার জন্যে এখানে ট্যাপ করুন</string>
    <string name="location">লোকেশন</string>

    <string-array name="instrumentType">
        <item>ধান রোপণ যন্ত্র</item>
        <item>ট্র্যাক্টর</item>
        <item>হাল চাষের মেশিন</item>
    </string-array>

    <string-array name="region">

        <item>Dhaka</item>
        <item>Sylhet</item>
        <item>Ctg</item>
        <item>Barisal</item>

    </string-array>

    <string-array name="Dhaka_area">
        <item>Mirpur</item>
        <item>Uttara</item>
        <item>Dhanmondi</item>
    </string-array>

    <string-array name="sylhet_area">
        <item>Mirpur1</item>
        <item>Uttara1</item>
        <item>Dhanmondi1</item>
    </string-array>

    <string-array name="category">

        <item>Pesticides</item>
        <item>Crops</item>
        <item>Instrument</item>


    </string-array>
    <string name="title_activity_maps__adding__instrument">Map</string>
    <string name="title_activity_maps__adding_instrument">Map</string>
    <string name="confirm_location">আপনার লোকেশন নিশ্চিত করুন</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps__show_instrument">Map</string>
    <string name="instrument_type">সরঞ্জাম ক্যাটেগরি</string>
    <string name="select_category">সরঞ্জামের ক্যাটেগরি সিলেক্ট করুন</string>
    <string name="contact_owner">যোগাযোগ করুন</string>
    <string name="instrument_category">সরঞ্জাম ক্যাটেগরি</string>
    <string name="hour_price_fordetails">ঘন্টা প্রতি ভাড়া</string>
    <string name="name_fordetails">মালিকের নাম</string>
    <string name="phone_fordetails">মালিকের ফোন নম্বর</string>
    <string name="address_fordetails">সরঞ্জামের ঠিকানা</string>
    <string name="more_fordetails">আরও...</string>
    <string name="info_instrument">সরঞ্জামের তথ্য</string>
    <string name="disease_and_insects">রোগবালাই</string>
    <string name="info_about_cultivation">চাষাবাদ সংক্রান্ত টিপস</string>
    <string name="chara_ropon_dhap">চারা রোপণ ধাপ</string>
    <string name="udhvidh_bordhon_dhap">উদ্ভিদের বর্ধনসাধক ধাপ</string>
    <string name="pushpo_dhap">পুষ্পোদ্গম ধাপ</string>
    <string name="folon_dhap">ফলন ধাপ</string>
    <string name="fosol_katar_dhap">ফসল কাটার ধাপ</string>



</resources>
