<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="35dp"
    android:layout_height="match_parent"
    tools:context=".FarmerLoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/phoneText"/>

    <AutoCompleteTextView
        android:id="@+id/farLogActivity_enter_phoneText"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:inputType="phone"
        android:hint="@string/enter_phoneText"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/pinText"/>

    <EditText
        android:id="@+id/farLogActivity_enter_pinText"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:hint="@string/enter_pinText"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/farLogActivity_forgotPin"
        android:text="@string/forgotPin_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="151dp"
        android:textSize="19sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/farLogActivity_loginButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="25dp"
        android:text="@string/loginButton_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/farLogActivity_createAccount"
        android:text="@string/createAcc_asFarmer_text"
        android:textAlignment="center"
        android:layout_marginTop="150dp"
        android:textSize="19sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>