<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/general_info" />

    <EditText
        android:id="@+id/editText7"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:inputType="textPersonName"
        android:hint="@string/name" />



    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:textSize="18dp"
        android:text="@string/dateOfBirth" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:hint="@string/phoneText"
        android:inputType="textPersonName"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/day"
        android:layout_marginTop="220dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/month"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="125dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/year"
        android:layout_width="100dp"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="250dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/division"
        android:layout_marginTop="310dp"
        android:layout_width="165dp"
        android:layout_marginLeft="200dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/district"
        android:layout_marginTop="310dp"
        android:layout_width="165dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/subDistrict"
        android:layout_marginTop="360dp"
        android:layout_width="165dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/union"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="360dp"
        android:layout_width="165dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/police"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp" />

    <Spinner
        android:id="@+id/village"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="200dp"
        android:layout_width="165dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView8"
        android:layout_marginTop="260dp"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <TextView
        android:id="@+id/textView9"
        android:layout_marginTop="198dp"
        android:layout_marginLeft="60dp"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day" />

    <TextView
        android:id="@+id/textView10"
        android:layout_marginTop="198dp"
        android:layout_marginLeft="184dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month" />

    <TextView
        android:id="@+id/textView11"
        android:layout_marginTop="198dp"
        android:layout_marginLeft="306dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <TextView
        android:id="@+id/textView12"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="111dp"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division" />

    <TextView
        android:id="@+id/textView13"
        android:textSize="15dp"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="298dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/district" />

    <TextView
        android:id="@+id/textView14"
        android:textSize="15dp"
        android:layout_marginTop="339dp"
        android:layout_marginLeft="93dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subDistrict" />

    <TextView
        android:id="@+id/textView15"
        android:textSize="15dp"
        android:layout_marginTop="339dp"
        android:layout_marginLeft="283dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/union" />

    <TextView
        android:id="@+id/textView16"
        android:textSize="15dp"
        android:layout_marginTop="389dp"
        android:layout_marginLeft="121dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policeStation" />

    <TextView
        android:id="@+id/textView17"
        android:textSize="15dp"
        android:layout_marginTop="389dp"
        android:layout_marginLeft="308dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/village" />

    <EditText
        android:id="@+id/editText9"
        android:layout_marginTop="450dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/picture" />

    <Button
        android:id="@+id/button"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmRegistration" />


</RelativeLayout>