<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="35dp"
    android:layout_height="match_parent"
    tools:context=".BuyerLoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/phoneText"/>

    <AutoCompleteTextView
        android:layout_marginTop="15dp"
        android:id="@+id/buyLogActivity_enter_phoneText"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:inputType="phone"
        android:hint="@string/enter_phoneText"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/buyLogActivity_loginButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="25dp"
        android:text="@string/loginButton_text"
        android:textSize="16sp" />


</LinearLayout>