<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".VerificationActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_info_text"
        android:gravity="center"
        android:textSize="20sp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_hint"
        android:id="@+id/verificattion_code_et"
        android:layout_margin="40dp"
        android:inputType="number"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Button_otp"
        android:textSize="20sp"
        android:text="@string/otp_confirmText"
        android:padding="10dp"
        android:textStyle="bold"/>


</LinearLayout>