<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cultivation_DiseaseFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chara_ropon_dhap" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chara_ropon_dhap_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:listitem="@layout/list_cultivation_disease" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/udhvidh_bordhon_dhap" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/udhvidh_bordhon_dhap_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:listitem="@layout/list_cultivation_disease" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pushpo_dhap" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pushso_dhap_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:listitem="@layout/list_cultivation_disease" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/folon_dhap" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/folon_dhap_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:listitem="@layout/list_cultivation_disease" />


            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fosol_katar_dhap" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fosol_katar_dhap_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:listitem="@layout/list_cultivation_disease" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>