<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/otpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/otp_info_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/otp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otpTitle"
            android:layout_marginTop="15dp"
            android:hint="@string/otp_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/otp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/otp_password"
            android:layout_marginTop="15dp"
            android:text="@string/otp_confirmText"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

</LinearLayout>